# neversim

./: .gitignore  README.md  pyproject.toml
neversim/: __init__.py  cli.py  config.py  metrics.py  objective.py  optimisation.py  simulation.py  viz.py
